# Yaka

./: .env.sample  .gitignore  CHANGELOG.md  README.fr.md  README.md  TODO.md  docker-compose.yaml
backend/: .dockerignore  .env.sample  Dockerfile  alembic.ini  generate_response_model.py  pyproject.toml  requirements.txt  schema_reponse.json
backend/app/: database.py  main.py  multi_database.py  test_config.py  test_database.py
backend/data/: database_folder.md
backend/migrations/: env.py
backend/scripts/: create_board.py
backend/tests/: conftest.py  integration_test_documentation.md  run_integration_tests.py  test_admin_routes.py  test_ai_features_endpoint.py  test_board_context_middleware.py  test_board_settings.py  test_board_settings_model.py  test_card.py  test_card_comment.py  test_card_comment_model.py  test_card_history.py  test_card_history_model.py  test_card_item.py  test_card_item_model.py  test_card_model.py  test_card_position_fix.py  test_client_wrapper.py  test_email.py  test_export_documentation.md  test_export_service.py  test_global_dictionary.py  test_integration_auth_api.py  test_integration_board_settings_api.py  test_integration_card_comments_api.py  test_integration_card_history_api.py  test_integration_card_items_api.py  test_integration_cards_api.py  test_integration_dictionary_api.py  test_integration_export_api.py  test_integration_labels_api.py  test_integration_list_workflow.py  test_integration_lists_api.py  test_integration_multi_boards.py  test_integration_users_api.py  test_invite_flow.py  test_kanban_list.py  (+22 more)
(+258 files in other folders)
